Homework 3/Freya Assignment/style.css
/*
Project Name: Relaxr
Client: Week 2 Assignment
Author: Freya Doney
Developer @GA in SYD
*/


/******************************************
/* SETUP
/*******************************************/

/* Box Model Hack */
* {
     -moz-box-sizing: border-box; /* Firexfox */
     -webkit-box-sizing: border-box; /* Safari/Chrome/iOS/Android */
     box-sizing: border-box; /* IE */
}

/* Clear fix hack */
.clearfix:after {
     content: ".";
     display: block;
     clear: both;
     visibility: hidden;
     line-height: 0;
     height: 0;
}

.clear {
  clear: both;
}

.alignright {
  float: right;
  padding: 0 0 10px 10px; /* note the padding around a right floated image */
}

.alignleft {
  float: left;
  padding: 0 10px 10px 0; /* note the padding around a left floated image */
}

/******************************************
/* BASE STYLES
/*******************************************/

body {
    line-height: 1.5;
    font-family: 'Open Sans', sans-serif;
    cursor: default;

}


/******************************************
/* LAYOUT
/*******************************************/

/* Center the container */
.wrapper {
  max-width: 1200px;
  margin: 0 auto;
  border:1px solid black;

}

header {
  height: 500px;
  
  
}

.tinted-image {
  height: 500px;
  background: url(./images/header_bg.jpg) no-repeat center top;
  position:relative;
}

.logo{
  padding:10px 0 0 60px;
  height:30%;
  font-family: 'Open Sans', sans-serif;
}

h1{
  color: white;
  font-size:24px;
  font-style: bold;
}

.quote{
  text-align: center;
  height:20%;
  font-family: 'Open Sans', sans-serif;
}

h2{
  font-size:24px;
  color:white;
  letter-spacing: 1px;
  font-weight:600;
}

header .button{
  text-decoration:none;
  background-color:#f9e42e;
  color:#121212;
  text-align: center;
  font-weight: bold;
  font-size: 14px;
  border-radius: 5px;
  display:block;
  padding:12px;
  margin: 20px 450px 20px 450px;
  font-family: 'Open Sans', sans-serif;
}

.sectionA{
  background-color: #f0efef;
  padding-top:10px;
  padding-left:10%;
  padding-right:50%;
  padding-bottom: 10px;
  font-family: 'Open Sans', sans-serif;
  float:left;
  width:100%;
}

.sectionA>h2{
  font-size:20px;
  color:#033048;
}

.sectionA p{
  font-weight:300;
  font-size:13px;
  font-weight:300;
  color: #121212;
  line-height:1.5;
}

.sectionA ul{
  font-weight:300;
  font-size:13px;
  padding-left:40px;
  list-style-type: disc;
  line-height:1.5;
}

.sectionB{
  background: url(./images/testimonial_bg.jpg) no-repeat center; 
  background-size: cover;
  color: white;
  text-align: center;
  height: 200px;
  padding:10px 33% 10px 33%;
  font-family: 'Open Sans', sans-serif;
  float:left;

}

.sectionB p{
  font-size:18px;
  font-weight:300;
  font-style:italic; 
  font-family: 'Open Sans', sans-serif;
  line-height:1.5;

}

.sectionB code{
  font-weight:600;
  font-size:18px;
  font-family: 'Open Sans', sans-serif;

}

.sectionC{
  background-color:#f9e42e;
  padding-top:3px;
  padding-bottom:3px;
  margin-bottom:auto;
  float:left;
  width:100%;
  display: block;
}

.sectionC .button{
  text-decoration:none;
  background-color:#033048;
  color:white;
  text-align: center;
  font-style: bold;
  font-size: 12px;
  border-radius: 5px;
  display:block;
  padding:12px;
  margin: 20px 450px 20px 450px;
  font-family: 'Open Sans', sans-serif;
}

.clearfix:after {
     content: ".";
     display: block;
     clear: both;
     visibility: hidden;
     line-height: 0;
     height: 0;
}

footer {
  background-color:#121212;
  display:block;
  float:left;
  width:100%;
  padding:30px 460px 10px 460px;
  text-align:center;
  padding:20px auto;

}

footer h1{
  color:#f9e42e;
  font-size: 24px;
  font-weight: 800;
  font-family: 'Open Sans', sans-serif;
  letter-spacing: 1px;
  padding-top:30px;
}

.social-media{
  width: 240px;
  height: 50px;
  margin: 50px auto;
  text-align: center;
}

footer a{ 
  max-width:15px; 
  max-height: auto;
}

footer p{
  font-family: 'Open Sans', sans-serif;
  color: white;
  font-size: 9px;
  font-weight: 600;
  padding-bottom: 15px;
}

/******************************************
/* ADDITIONAL STYLES
/*******************************************/

